# kuaihuiai

./: .gitignore  LICENSE  README.md  README_MNN.md  gradle.properties  gradlew
app/: CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  model_manager.cpp  native-image-generator.cpp  native_engine.cpp  native_model.cpp  native_utils.cpp  scheduler.cpp  tokenizer.cpp
app/src/main/cpp/include/: android_utils.h  inference_engine.h  model_loader.h
app/src/main/cpp/src/: BPETokenizer.cpp  BPETokenizer.hpp  FloatConversion.cpp  FloatConversion.hpp  ProgressReporter.cpp  ProgressReporter.hpp  PromptProcessor.cpp  PromptProcessor.hpp  SDEngine.cpp  SDUtils.cpp  SDUtils.hpp  Scheduler.cpp  Scheduler.hpp  UNetDenoiser.cpp  VAEDecoder.cpp  kuaihui_native_engine.cpp
app/src/main/java/comkuaihuiai/: KuaiHuiAIApplication.kt  MainActivity.kt
app/src/main/java/comkuaihuiai/data/: AppPreferences.kt  TagSuggestion.kt  ThemePreferences.kt
app/src/main/java/comkuaihuiai/data/model/: DownloadModels.kt  GenerationModels.kt
app/src/main/java/comkuaihuiai/data/repository/: GenerationHistoryRepository.kt  GenerationRepository.kt  ModelRepository.kt  PromptTemplateRepository.kt
app/src/main/java/comkuaihuiai/service/: BackendService.kt  CacheManager.kt  ControlNetManager.kt  DownloadService.kt  EmbeddingsManager.kt  InferenceEngine.kt  InpaintingManager.kt  KuaiHuiInferenceEngine.kt  LoRAManager.kt  MNNEngine.kt  ModelConverter.kt  ModelDownloadService.kt  OptimizationManager.kt  PNGInfoParser.kt  PerformanceManager.kt  PromptAnalyzer.kt  SchedulerManager.kt  SettingsManager.kt  UpscalerManager.kt  VAEManager.kt
app/src/main/java/comkuaihuiai/service/advanced/: AdvancedInferenceEngine.kt
app/src/main/java/comkuaihuiai/service/audio/: AudioEngine.kt
app/src/main/java/comkuaihuiai/service/benchmark/: BenchmarkEngine.kt
app/src/main/java/comkuaihuiai/service/export/: ExportManager.kt
app/src/main/java/comkuaihuiai/service/multimodal/: MultimodalEngine.kt
app/src/main/java/comkuaihuiai/service/native/: LocalDreamEngine.kt  LocalDreamInferenceEngine.kt  LocalDreamModelManager.kt  NativeInferenceEngine.kt  NativeLocalDreamEngine.kt  NativeModelManager.kt  NativeUtils.kt
app/src/main/java/comkuaihuiai/service/network/: APIServiceManager.kt
app/src/main/java/comkuaihuiai/service/performance/: PerformanceOptimizer.kt
app/src/main/java/comkuaihuiai/service/video/: VideoEngine.kt
app/src/main/java/comkuaihuiai/ui/: MainActivity.kt
app/src/main/java/comkuaihuiai/ui/components/: AnimationComponents.kt  BlockingProgressOverlay.kt  EnhancedComponents.kt  ImageComponents.kt  InputComponents.kt  ProgressComponents.kt  PromptTagTextField.kt
app/src/main/java/comkuaihuiai/ui/screens/: ChatScreen.kt  GenerationScreen.kt  GenerationScreenV23.kt  GenerationScreenV24.kt  InpaintScreen.kt  ModelMarketScreen.kt  ModelSelectionScreen.kt  ModelsScreen.kt  Navigation.kt  SettingsScreen.kt
app/src/main/java/comkuaihuiai/ui/theme/: Color.kt  Motion.kt  PresetSchemes.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/comkuaihuiai/utils/: LogCapture.kt
app/src/main/java/io/github/xororz/localdream/: BuildConfig.kt  LocalDreamApplication.kt  MainActivity.kt
app/src/main/java/io/github/xororz/localdream/data/: Preferences.kt  ThemePreferences.kt
app/src/main/java/io/github/xororz/localdream/ui/theme/: Color.kt  Gradient.kt  Theme.kt
app/src/main/res/values/: colors.xml  themes.xml
